# rust-qrllib

./: .coverage-reasons.yml  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  RELEASE.md  REPO_SUMMARY.md  SECURITY.md  codecov.yml  deny.toml  release-plz.toml  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml  zizmor.yml
.github/acvp/: README.md  merge_vectors.py
.github/cross-verify/: README.md  dilithium_verify_ref.c  mldsa87_verify_ref.c  sphincs_sign_ref.c  sphincs_verify_ref.c  xmss_sign_ref.c  xmss_verify_ref.c
.github/workflows/: actionlint.yml  acvp.yml  cross-verify.yml  lint.yml  pages.yml  release.yml  security.yml  test.yml  wycheproof.yml
crates/qrllib/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/qrllib-wasm/: Cargo.toml  README.md
crates/qrllib-wasm/src/: lib.rs
crates/qrllib/examples/: dilithium_sign.rs  dilithium_verify.rs  mldsa87_sign.rs  mldsa87_verify.rs  sphincs_sign.rs  sphincs_verify.rs  xmss_sign.rs  xmss_verify_reverse.rs
crates/qrllib/src/: address.rs  descriptor.rs  dilithium.rs  error.rs  lattice.rs  legacy_xmss.rs  lib.rs  mldsa.rs  mlkem.rs  mnemonic.rs  qrl_wordlist.txt  seed.rs  signing_context.rs  sphincsplus.rs  sphincsplus_wallet.rs  wallet.rs  wallet_type.rs  wordlist.rs  xmss.rs
crates/qrllib/src/xmss/: rfc8391.rs
crates/qrllib/tests/: acvp_mldsa.rs  coverage.rs  hardening_suite.rs  kat_vectors.rs  metamorphic_exhaustive.rs  metamorphic_suite.rs  parity_suite.rs  thread_fuzz_suite.rs  wycheproof_mldsa.rs
demo/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo/src/: App.vue  qrllib.ts  style.css
