[workspace]
members = [
    "crates/qrllib",
    "crates/qrllib-wasm",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/theqrl/rust-qrllib"

[workspace.dependencies]
getrandom = "0.2.16"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-wasm-bindgen = "0.6.5"
sha2 = "0.10.9"
sha3 = "0.10.8"
thiserror = "2.0.17"
wasm-bindgen = "0.2.105"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
