[workspace]
members = [
    "crates/qrllib",
    "crates/qrllib-wasm",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/theqrl/rust-qrllib"

[workspace.dependencies]
getrandom = "=0.2.17"
hex = "=0.4.3"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
serde-wasm-bindgen = "=0.6.5"
sha2 = "=0.11.0"
sha3 = "=0.12.0"
shake = "=0.1.0"
thiserror = "=2.0.18"
wasm-bindgen = "=0.2.118"
zeroize = { version = "=1.9.0", features = ["zeroize_derive"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
