[package]
name = "qrllib"
version = "0.1.0"
edition = "2024"
description = "Rust QRL primitives, wallet helpers, and ML-DSA-87 implementation for native and wasm use"
license.workspace = true
repository.workspace = true

[dependencies]
getrandom.workspace = true
hex.workspace = true
sha2.workspace = true
sha3.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }
